# hiknvr

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: hikNvrCap.cpp  hikNvrCap.hpp  interface.cpp  main.cpp
workspace/: demo.py  interval.py  server.py
